# SolarSystem

./: CMakeLists.txt
assets/: eart.ppm  noise.pgm  opticalDepth.pgm
dependencies/glad/: glad.c  glad.h
include/: camera.hpp  init.h  input.hpp  math.hpp  planet.hpp
shaders/: main.frag  main.vert  ui.frag
src/: camera.cpp  generateTexture.sh  init.c  input.cpp  main.cpp  planet.cpp  texturegen.cpp
